// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swagger integration > OpenSpec > should swagger spec 2 1`] = `
{
  "consumes": [
    "application/json",
  ],
  "definitions": {
    "Calendar": {
      "properties": {
        "id": {
          "type": "string",
        },
        "name": {
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
    },
  },
  "info": {
    "title": "Swagger title",
    "version": "1.2.0",
  },
  "paths": {
    "/rest/calendars": {
      "get": {
        "operationId": "CalendarsController_getAll",
        "parameters": [],
        "produces": [
          "application/json",
        ],
        "responses": {
          "200": {
            "description": "Success",
            "schema": {
              "items": {
                "$ref": "#/definitions/Calendar",
              },
              "type": "array",
            },
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": {
      "post": {
        "consumes": [
          "text/plain",
        ],
        "operationId": "CalendarsController_csv",
        "parameters": [
          {
            "in": "body",
            "name": "body",
            "required": false,
            "schema": {
              "type": "string",
            },
          },
        ],
        "produces": [
          "text/plain",
        ],
        "responses": {
          "200": {
            "description": "Success",
            "schema": {
              "type": "string",
            },
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": {
      "get": {
        "description": "Events",
        "operationId": "EventCtrl_get",
        "parameters": [],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": {
      "get": {
        "operationId": "CalendarsController_get",
        "parameters": [
          {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "pattern": "^[0-9a-fA-F]{24}$",
            "required": true,
            "type": "string",
          },
        ],
        "produces": [
          "application/json",
        ],
        "responses": {
          "200": {
            "description": "Success",
            "schema": {
              "$ref": "#/definitions/Calendar",
            },
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
  },
  "produces": [
    "application/json",
  ],
  "swagger": "2.0",
  "tags": [
    {
      "name": "CalendarsController",
    },
    {
      "name": "EventCtrl",
    },
  ],
}
`;

exports[`Swagger integration > OpenSpec > should swagger spec 3 1`] = `
{
  "components": {
    "schemas": {
      "Calendar": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": {
    "/rest/calendars": {
      "get": {
        "operationId": "CalendarsController__getAll",
        "parameters": [],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/Calendar",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": {
      "post": {
        "operationId": "CalendarsController__csv",
        "parameters": [],
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": {
      "get": {
        "description": "Events",
        "operationId": "EventCtrl__get",
        "parameters": [],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": {
      "get": {
        "operationId": "CalendarsController__get",
        "parameters": [
          {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "example": "5ce7ad3028890bd71749d477",
              "pattern": "^[0-9a-fA-F]{24}$",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Calendar",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "CalendarsController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "CalendarsController",
    },
    {
      "name": "EventCtrl",
    },
  ],
}
`;
